glpk-4.6/contrib/deli/Glpk4.PAS


{* void lpx_get_ips_row(LPX *lp, int i, double *vx, double *dx); *}
{* obtain row interior point solution *}
Procedure lpx_get_ips_row(lp : PLPX; i : Integer; Var vx : Double; Var dx : Double);
cdecl; external 'glpk-4.dll' index 204;

{* int lpx_get_ips_stat(LPX *lp); *}
{* query status of interior point solution *}
Function lpx_get_ips_stat(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 205;

{* int lpx_get_mat_col(LPX *lp, int j, int ndx[], double val[]); *}
{* get column of the constraint matrix *}
Function lpx_get_mat_col(lp : PLPX; j : Integer; ndx : PIntArray; val : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 206;

{* int lpx_get_mat_row(LPX *lp, int i, int ndx[], double val[]); *}
{* get row of the constraint matrix *}
Function lpx_get_mat_row(lp : PLPX; i : Integer; ndx : PIntArray; val : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 207;

{* double lpx_get_mip_col(LPX *lp, int j); *}
{* obtain column activity for MIP solution *}
Function lpx_get_mip_col(lp : PLPX; j : Integer):Double;
cdecl; external 'glpk-4.dll' index 208;

{* double lpx_get_mip_obj(LPX *lp); *}
{* obtain value of the obj. func. for MIP solution *}
Function lpx_get_mip_obj(lp : PLPX):Double;
cdecl; external 'glpk-4.dll' index 209;

{* double lpx_get_mip_row(LPX *lp, int i); *}
{* obtain row activity for MIP solution *}
Function lpx_get_mip_row(lp : PLPX; i : Integer):Double;
cdecl; external 'glpk-4.dll' index 210;

{* int lpx_get_mip_stat(LPX *lp); *}
{* query status of MIP solution *}
Function lpx_get_mip_stat(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 211;

{* int lpx_get_num_bin(LPX *lp); *}
{* determine number of binary columns *}
Function lpx_get_num_bin(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 212;

{* int lpx_get_num_cols(LPX *lp); *}
{* determine number of columns *}
Function lpx_get_num_cols(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 213;

{* int lpx_get_num_int(LPX *lp); *}
{* determine number of integer columns *}
Function lpx_get_num_int(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 214;

{* int lpx_get_num_nz(LPX *lp); *}
{* determine number of constraint coefficients *}
Function lpx_get_num_nz(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 215;

{* int lpx_get_num_rows(LPX *lp); *}
{* determine number of rows *}
Function lpx_get_num_rows(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 216;

{* double lpx_get_obj_c0(LPX *lp); *}
{* obtain constant term of the obj. function *}
Function lpx_get_obj_c0(lp : PLPX):Double;
cdecl; external 'glpk-4.dll' index 217;

{* int lpx_get_obj_dir(LPX *lp); *}
{* determine optimization direction *}
Function lpx_get_obj_dir(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 218;

{* char *lpx_get_obj_name(LPX *lp); *}
{* obtain objective function name *}
Function lpx_get_obj_name(lp : PLPX):PChar;
cdecl; external 'glpk-4.dll' index 219;

{* double lpx_get_obj_val(LPX *lp); *}
{* obtain value of the objective function *}
Function lpx_get_obj_val(lp : PLPX):Double;
cdecl; external 'glpk-4.dll' index 220;

{* int lpx_get_prim_stat(LPX *lp); *}
{* query primal status of basic solution *}
Function lpx_get_prim_stat(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 221;

{* char *lpx_get_prob_name(LPX *lp); *}
{* obtain problem name *}
Function lpx_get_prob_name(lp : PLPX):PChar;
cdecl; external 'glpk-4.dll' index 222;

{* double lpx_get_real_parm(LPX *lp, int parm); *}
{* query real control parameter *}
Function lpx_get_real_parm(lp : PLPX; parm : Integer):Double;
cdecl; external 'glpk-4.dll' index 223;

{* void lpx_get_row_bnds(LPX *lp, int i, int *typx, double *lb, double *ub); *}
{* obtain row bounds *}
Procedure lpx_get_row_bnds(lp : PLPX; i : Integer; Var typx : Integer; Var lb : Double; Var ub : Double);
cdecl; external 'glpk-4.dll' index 224;

{* double lpx_get_row_coef(LPX *lp, int i); *}
{* obtain row objective coefficient *}
Function lpx_get_row_coef(lp : PLPX; i : Integer):Double;
cdecl; external 'glpk-4.dll' index 225;

{* void lpx_get_row_info(LPX *lp, int i, int *tagx, double *vx, double *dx); *}
{* obtain row solution information *}
Procedure lpx_get_row_info(lp : PLPX; i : Integer; Var tagx : Integer; Var vx : Double; Var dx : Double);
cdecl; external 'glpk-4.dll' index 226;

{* int lpx_get_row_mark(LPX *lp, int i); *}
{* determine row mark *}
Function lpx_get_row_mark(lp : PLPX; i : Integer):Integer;
cdecl; external 'glpk-4.dll' index 227;

{* char *lpx_get_row_name(LPX *lp, int i); *}
{* obtain row name *}
Function lpx_get_row_name(lp : PLPX; i : Integer):PChar;
cdecl; external 'glpk-4.dll' index 228;

{* int lpx_get_status(LPX *lp); *}
{* query basic solution status *}
Function lpx_get_status(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 229;

{* int lpx_integer(LPX *lp); *}
{* easy-to-use driver to the branch-and-bound method *}
Function lpx_integer(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 230;

{* int lpx_interior(LPX *lp); *}
{* easy-to-use driver to the interior point method *}
Function lpx_interior(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 231;

{* void lpx_load_mat3(LPX *lp, int nz, int rn[], int cn[], double a[]); *}
{* load constraint matrix *}
Procedure lpx_load_mat3(lp : PLPX; nz : Integer; rn : PIntArray; cn : PIntArray; a : PFloatArray);
cdecl; external 'glpk-4.dll' index 233;

{* void lpx_mark_col(LPX *lp, int j, int mark); *}
{* assign mark to column *}
Procedure lpx_mark_col(lp : PLPX; j : Integer; mark : Integer);
cdecl; external 'glpk-4.dll' index 234;

{* void lpx_mark_row(LPX *lp, int i, int mark); *}
{* assign mark to row *}
Procedure lpx_mark_row(lp : PLPX; i : Integer; mark : Integer);
cdecl; external 'glpk-4.dll' index 235;

{* int lpx_mixed_gomory(LPX *lp, int kind[], int len, int ndx[], double val[], double work[]); *}
{* generate Gomory's mixed integer cut *}
Function lpx_mixed_gomory(lp : PLPX; kind : PIntArray; len : Integer; ndx : PIntArray; val : PFloatArray; work : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 236;

{* int lpx_prim_art(LPX *lp); *}
{* find primal feasible solution (primal simplex) *}
Function lpx_prim_art(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 237;

{* int lpx_prim_opt(LPX *lp); *}
{* find optimal solution (primal simplex) *}
Function lpx_prim_opt(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 238;

{* int lpx_prim_ratio_test(LPX *lp, int len, int ndx[], double val[], int how, double tol); *}
{* perform primal ratio test *}
Function lpx_prim_ratio_test(lp : PLPX; len : Integer; ndx : PIntArray; val : PFloatArray; how : Integer; tol : Double):Integer;
cdecl; external 'glpk-4.dll' index 239;

{* int lpx_print_ips(LPX *lp, char *fname); *}
{* write interior point solution in printable format *}
Function lpx_print_ips(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 240;

{* int lpx_print_mip(LPX *lp, char *fname); *}
{* write MIP problem solution in printable format *}
Function lpx_print_mip(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 241;

{* int lpx_print_prob(LPX *lp, char *fname); *}
{* write problem data in plain text format *}
Function lpx_print_prob(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 242;

{* int lpx_print_sol(LPX *lp, char *fname); *}
{* write LP problem solution in printable format *}
Function lpx_print_sol(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 243;

{* int lpx_read_bas(LPX *lp, char *fname); *}
{* read predefined basis using MPS format *}
Function lpx_read_bas(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 244;

{* LPX *lpx_read_lpt(char *fname); *}
{* read LP/MIP problem using CPLEX LP format *}
Function lpx_read_lpt(fname : String):PLPX;
cdecl; external 'glpk-4.dll' index 245;

{* LPX *lpx_read_model(char *model, char *data, char *output); *}
{* read LP/MIP model written in GNU MathProg language *}
Function lpx_read_model(model : String; data : String; output : String):PLPX;
cdecl; external 'glpk-4.dll' index 246;

{* LPX *lpx_read_mps(char *fname); *}
{* read in problem data using MPS format *}
Function lpx_read_mps(fname : String):PLPX;
cdecl; external 'glpk-4.dll' index 247;

{* void lpx_realloc_prob(LPX *lp, int m_max, int n_max); *}
{* reallocate LP problem object *}
Procedure lpx_realloc_prob(lp : PLPX; m_max : Integer; n_max : Integer);
cdecl; external 'glpk-4.dll' index 248;

{* int lpx_reduce_form(LPX *lp, int len, int ndx[], double val[], double work[]); *}
{* reduce linear form *}
Function lpx_reduce_form(lp : PLPX; len : Integer; ndx : PIntArray; val : PFloatArray; work : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 249;

{* void lpx_reset_parms(LPX *lp); *}
{* reset control parameters to default values *}
Procedure lpx_reset_parms(lp : PLPX);
cdecl; external 'glpk-4.dll' index 250;

{* void lpx_scale_prob(LPX *lp); *}
{* scale LP problem data *}
Procedure lpx_scale_prob(lp : PLPX);
cdecl; external 'glpk-4.dll' index 251;

{* void lpx_set_class(LPX *lp, int clss); *}
{* set (change) problem class *}
Procedure lpx_set_class(lp : PLPX; clss : Integer);
cdecl; external 'glpk-4.dll' index 252;

{* void lpx_set_col_bnds(LPX *lp, int j, int typx, double lb, double ub); *}
{* set (change) column bounds *}
Procedure lpx_set_col_bnds(lp : PLPX; j : Integer; typx : Integer; lb : Double; ub : Double);
cdecl; external 'glpk-4.dll' index 253;

{* void lpx_set_col_coef(LPX *lp, int j, double coef); *}
{* set (change) column objective coefficient *}
Procedure lpx_set_col_coef(lp : PLPX; j : Integer; coef : Double);
cdecl; external 'glpk-4.dll' index 254;

{* void lpx_set_col_kind(LPX *lp, int j, int kind); *}
{* set (change) column kind *}
Procedure lpx_set_col_kind(lp : PLPX; j : Integer; kind : Integer);
cdecl; external 'glpk-4.dll' index 255;

{* void lpx_set_col_name(LPX *lp, int j, char *name); *}
{* assign (change) column name *}
Procedure lpx_set_col_name(lp : PLPX; j : Integer; name : String);
cdecl; external 'glpk-4.dll' index 256;

{* void lpx_set_col_stat(LPX *lp, int j, int stat); *}
{* set (change) column status *}
Procedure lpx_set_col_stat(lp : PLPX; j : Integer; stat : Integer);
cdecl; external 'glpk-4.dll' index 257;

{* void lpx_set_int_parm(LPX *lp, int parm, int val); *}
{* set (change) integer control parameter *}
Procedure lpx_set_int_parm(lp : PLPX; parm : Integer; val : Integer);
cdecl; external 'glpk-4.dll' index 258;

{* void lpx_set_mat_col(LPX *lp, int j, int len, int ndx[], double val[]); *}
{* set (replace) column of the constraint matrix *}
Procedure lpx_set_mat_col(lp : PLPX; j : Integer; len : Integer; ndx : PIntArray; val : PFloatArray);
cdecl; external 'glpk-4.dll' index 259;

{* void lpx_set_mat_row(LPX *lp, int i, int len, int ndx[], double val[]); *}
{* set (replace) row of the constraint matrix *}
Procedure lpx_set_mat_row(lp : PLPX; i : Integer; len : Integer; ndx : PIntArray; val : PFloatArray);
cdecl; external 'glpk-4.dll' index 260;

{* void lpx_set_obj_c0(LPX *lp, double c0); *}
{* set (change) constant term of the obj. function *}
Procedure lpx_set_obj_c0(lp : PLPX; c0 : Double);
cdecl; external 'glpk-4.dll' index 261;

{* void lpx_set_obj_dir(LPX *lp, int dir); *}
{* set (change) optimization direction *}
Procedure lpx_set_obj_dir(lp : PLPX; dir : Integer);
cdecl; external 'glpk-4.dll' index 262;

{* void lpx_set_obj_name(LPX *lp, char *name); *}
{* assign (change) objective function name *}
Procedure lpx_set_obj_name(lp : PLPX; name : String);
cdecl; external 'glpk-4.dll' index 263;
